modified some info in title & passages

--- a/myblog/views/index.ejs
+++ b/myblog/views/index.ejs
@@ -12,9 +12,9 @@
 	<li class="list-group-item">
 		<h3><a href="#">学习node.js</a></h3>
 		<p class="info">
-			<span>作者：小蚁</span>
+			<span>作者：peppa</span>
 			<span>|</span>
-			<span>日期：2016-12-14</span>
+			<span>日期：2018-5-6</span>
 		</p>
 	</li>
 </ul>
