--- a/myblog/views/header.ejs
+++ b/myblog/views/header.ejs
@@ -20,7 +20,7 @@
     	<div class="container">
     		<div class="container-fluid">
     			<div class="navbar-header">
-    				<a href="/" class="navbar-brand">YIDBlog</a>
+    				<a href="/" class="navbar-brand">MyBlog</a>
     			</div>
     			<a href="/" class="navbar-brand">首页</a>
     			<ul class="nav navbar-nav navbar-right">
