--- a/myblog/views/index.ejs
+++ b/myblog/views/index.ejs
@@ -7,15 +7,18 @@
 		</span>
 	</div>
 </form>
-
+<p><%= time %</p>
 <ul class="list-group">
+	<% posts.forEach(function(post)){%>
 	<li class="list-group-item">
-		<h3><a href="#">学习node.js</a></h3>
+		<h3><a href="/detail?id=<%= post._id%>"><%= post.title %></a></h3>
 		<p class="info">
-			<span>作者：peppa</span>
+			<span>作者：<%= post.author %</span>
 			<span>|</span>
-			<span>日期：2018-5-6</span>
+			<span>日期：<%= post.publishTime %></span>
 		</p>
 	</li>
+	<hr>
+	<%})%>
 </ul>
 <%- include footer %>
